--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,24 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
-
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script type="module" src='/build/main.js'></script>
 </head>
+<body
+  data-barba="wrapper"
+  class="
+min-h-screen
+bg-secondary-light
+text-black
+dark:bg-secondary-dark 
+dark:text-white
+font-sans
+bg-grey-900"
+>
+
+</body>
 
 </html>
