feat (about) add the about page yay!

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
     class="
       min-h-screen
       text-black
-      bg-secondary-light
+      bg-secondary-dark
       font-sans
-      dark:bg-secondary-dark
+      dark:bg-secondary-light
     "
   ></body>
 </html>
