--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link href="/tailwind.css" rel="stylesheet" />
     <link rel="stylesheet" href="/global.css" />
@@ -11,13 +10,6 @@
     <script type="module" src="/build/main.js"></script>
   </head>
   <body
-    data-barba="wrapper"
-    class="
-      min-h-screen
-      text-black
-      bg-secondary-dark
-      font-sans
-      dark:bg-secondary-light
-    "
+    class="text-black bg-secondary-dark font-sans dark:bg-secondary-light mb-20"
   ></body>
 </html>
