fix docker-compose folder path 	update body and footer styles to be responsive 	remove margin bottom from body 	update start command in package-json 	remove body styles from app root

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
     <script type="module" src="/build/main.js"></script>
   </head>
   <body
-    class="text-black bg-secondary-dark font-sans dark:bg-secondary-light mb-20"
+    class="text-black bg-secondary-dark font-sans dark:bg-secondary-light"
   ></body>
 </html>
