--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/global.css" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="text-black bg-secondary-dark font-sans dark:bg-secondary-light bg-opacity-50">
+	<body data-sveltekit-preload-data="hover" class="text-black bg-secondary-dark font-sans bg-opacity-10 dark:bg-opacity-100">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
